# math3d

./: README.md  __init__.py  _constants.py  pyproject.toml  quat.py  transform.py  vec3.py
tests/: quat_test.py  transform_test.py  vec3_test.py
