[tool.poetry]
name = "math3d"
version = "0.1.0"
description = ""
authors = ["dxy <daniel.yang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.2"
pytest = "^5.4.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
